--- a/Venta.html
+++ b/Venta.html
@@ -51,7 +51,7 @@
               <input type="email" placeholder=" "name="email" class="data"><br>
               <label for="phone">Teléfono</label><br>
               <input type="phone" paceholder="" name="phone" class="data">
-              <input type="submit" name="submit" class="main_button" value="Confirmar pago">
+              <a href="exito.html"<input type="submit" name="submit" class="main_button" value="Confirmar pago">></a>
             </form>
           </div>
        </div>
