--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </div>
         <h1>Producto 1</h1>
         <p>miles de productos que hay en el mercado, peo nada como una caja de gatitos</p>
-        <a href="venta.html"><button href="venta.html" class="main_button">Lo quiero</button></a>
+        <a href="venta.html"><button href="Venta.html" class="main_button">Lo quiero</button></a>
       </div>
     </div>
     <div class="product">
@@ -46,7 +46,7 @@
         </div>
         <h1>Producto 2</h1>
         <p>miles de productos que hay en el mercado, peo nada como una caja de gatitos</p>
-        <a href="venta.html"><button href="venta.html" class="main_button">Lo quiero</button></a>
+        <a href="venta.html"><button href="Venta.html" class="main_button">Lo quiero</button></a>
       </div>
     </div>
    </div>
