--- a/Producto.html
+++ b/Producto.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="es"dir="ltr">
   <head>
+    <meta name="viewport" content="whidth=divaice-width, initial-scale=1.0">
     <meta charset="utf-8">
-    <meta name="viewport" content="width=divaice-whidth, inicial-scale_1.0">
     <title>Brand</title>
     <link rel="stylesheet" href="css/grid.css">
     <link rel="stylesheet" href="css/style.css">
@@ -49,15 +49,17 @@
    </div>
 
 
-<footer>
-  <div class="Terminos">
-    <a href="#">Terminos y Condiciones</a>
-  </div>
-  <div class="list">
-    <ul>
-      <li><a href="#">Contacto</a></li>
-    </ul>
-  </div>
-</footer>
-  </body>
-</html>
+   <footer>
+     <div class="Terminos">
+       <ul>
+       <li><a href="#">Terminos y Condiciones</a></li>
+       </ul>
+     </div>
+     <div class="Terminos contact">
+       <ul>
+         <li><a href="mailto:contacto@Brand.com">Contacto</a></li>
+       </ul>
+     </div>
+   </footer>
+     </body>
+   </html>
