--- a/Venta.html
+++ b/Venta.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="es"dir="ltr">
   <head>
+    <meta name="viewport" content="width=divaice-width, initial-scale=1.0">
     <meta charset="utf-8">
-    <meta name="viewport" content="width=divaice-whidth, inicial-scale_1.0">
     <title>Brand</title>
     <link rel="stylesheet" href="css/grid.css">
     <link rel="stylesheet" href="css/style.css">
@@ -51,7 +51,7 @@
               <input type="email" placeholder=" "name="email" class="data"><br>
               <label for="phone">Teléfono</label><br>
               <input type="phone" paceholder="" name="phone" class="data">
-              <a href="exito.html"<input type="submit" name="submit" class="main_button" value="Confirmar pago">></a>
+              <a href="falla.html"><input type="submit" name="submit" class="main_button" value="Confirmar pago"></a>
             </form>
           </div>
        </div>
@@ -65,11 +65,13 @@
 <!-- Inicio del footer -->
 <footer>
   <div class="Terminos">
-    <a href="#">Terminos y Condiciones</a>
-  </div>
-  <div class="list">
     <ul>
-      <li><a href="#">Contacto</a></li>
+    <li><a href="#">Terminos y Condiciones</a></li>
+    </ul>
+  </div>
+  <div class="Terminos contact">
+    <ul>
+      <li><a href="mailto:contacto@Brand.com">Contacto</a></li>
     </ul>
   </div>
 </footer>
