--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="es"dir="ltr">
   <head>
+    <meta name="viewport" content="whidth=divaice-width, initial-scale=1.0">
     <meta charset="utf-8">
-    <meta name="viewport" content="width=divaice-whidth, inicial-scale_1.0">
     <title>Brand</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/Mobile.css">
